--- a/NumPy-intro.ipynb
+++ b/NumPy-intro.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ba419427",
+   "metadata": {},
+   "source": [
+    "#### Name: Sharome Burton"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7240d1e5",
